--- a/apps/docs/content/docs/react/examples/open-in-v0.mdx
+++ b/apps/docs/content/docs/react/examples/open-in-v0.mdx
@@ -1,6 +1,6 @@
 ---
 title: Open in v0
-description: Examples for shadcn-stepper with v0
+description: Open examples in v0 to customize and iterate
 ---
 
 ## Stepper demo
@@ -63,28 +63,16 @@ Install the example by copying the following command:
 npx shadcn add https://stepperize.vercel.app/r/stepper-with-label-orientation.json
 ```
 
-## Stepper with responsive variant
+## Stepper with scroll tracking
 
-<OpenInV0 name="stepper-with-responsive-variant">
-  <StepperWithResponsiveVariant />
+<OpenInV0 name="stepper-with-scroll-tracking">
+  <StepperWithScrollTracking />
 </OpenInV0>
 
 Install the example by copying the following command:
 
 ```bash
-npx shadcn add https://stepperize.vercel.app/r/stepper-with-responsive-variant.json
-```
-
-## Stepper with tracking
-
-<OpenInV0 name="stepper-with-tracking">
-  <StepperWithTracking />
-</OpenInV0>
-
-Install the example by copying the following command:
-
-```bash
-npx shadcn add https://stepperize.vercel.app/r/stepper-with-tracking.json
+npx shadcn add https://stepperize.vercel.app/r/stepper-with-scroll-tracking.json
 ```
 
 ## Stepper with variants
