--- a/apps/docs/content/docs/react/api-references/scoped.mdx
+++ b/apps/docs/content/docs/react/api-references/scoped.mdx
@@ -11,11 +11,11 @@ The `Scoped` component acts as a provider, allowing you to synchronize stepper s
 import * as React from "react";
 import { defineStepper } from "@stepperize/react";
 
-const Stepper = defineStepper(
+const Stepper = defineStepper([
   { id: "first", title: "First" },
   { id: "second", title: "Second" },
   { id: "last", title: "Last" }
-);
+]);
 
 export const MyScopedStepper = () => (
   <Stepper.Scoped>
@@ -25,13 +25,13 @@ export const MyScopedStepper = () => (
 );
 
 const StepContent = () => {
-  const { when } = Stepper.useStepper();
+  const stepper = Stepper.useStepper();
   return (
     <React.Fragment>
-      {when("first", (step) => (
+      {stepper.when("first", (step) => (
         <p>Starting with {step.title}</p>
       ))}
-      {when("second", (step) => (
+      {stepper.when("second", (step) => (
         <p>In the middle: {step.title}</p>
       ))}
     </React.Fragment>
@@ -39,10 +39,10 @@ const StepContent = () => {
 };
 
 const StepNavigation = () => {
-  const { isLast, reset, next, when } = Stepper.useStepper();
+  const stepper = Stepper.useStepper();
   return (
-    <button onClick={isLast ? reset : next}>
-      {when(
+    <button onClick={stepper.isLast ? () => stepper.reset() : () => stepper.next()}>
+      {stepper.when(
         "last",
         () => "Reset",
         () => "Next"
@@ -53,50 +53,120 @@ const StepNavigation = () => {
 ```
 
 <Callout title="When to use Scoped">
-  Use `Scoped` only when child components need access to stepper state.
+  Use `Scoped` when child components need access to stepper state.
   Otherwise, use the hook directly in your component.
 </Callout>
 
+## With Initial State
+
+You can pass initial state to the `Scoped` component:
+
+```tsx twoslash
+import * as React from "react";
+import { defineStepper } from "@stepperize/react";
+
+const Stepper = defineStepper([
+  { id: "first", title: "First" },
+  { id: "second", title: "Second" },
+  { id: "last", title: "Last" }
+]);
+
+export const MyScopedStepper = () => (
+  <Stepper.Scoped
+    initial={{
+      step: "second",
+      metadata: {
+        first: { completed: true }
+      },
+      statuses: {
+        first: "success"
+      }
+    }}
+  >
+    <StepContent />
+  </Stepper.Scoped>
+);
+
+const StepContent = () => {
+  const stepper = Stepper.useStepper();
+  return <div>Current: {stepper.current.data.title}</div>;
+};
+```
+
 ## API Reference
 
-| Name            | Type                       | Description                           | Required |
-| --------------- | -------------------------- | ------------------------------------- | -------- |
-| initialStep     | `string`                   | ID of the initial step to display.    | No       |
-| initialMetadata | `Record<string, Metadata>` | Initial metadata for the stepper.     | No       |
-| children        | `React.ReactNode`          | Content to render inside the stepper. | Yes      |
+| Name | Type | Description | Required |
+| ---- | ---- | ----------- | -------- |
+| `initial` | `{ step?: string, metadata?: Record<string, any>, statuses?: Record<string, StepStatus> }` | Initial state for the stepper | No |
+| `children` | `React.ReactNode` | Content to render inside the stepper | Yes |
 
 ## Nested Scopes
 
-You can nest multiple scopes for more complex stepper hierarchies:
+You can nest multiple scopes for complex stepper hierarchies:
 
-```tsx
+```tsx twoslash
 import * as React from "react";
 import { defineStepper } from "@stepperize/react";
-// ---cut-before---
-const GlobalStepper = defineStepper(
+
+const GlobalStepper = defineStepper([
   { id: "start", title: "Start" },
   { id: "middle", title: "Middle" },
   { id: "end", title: "End" }
-);
+]);
 
-const LocalStepper = defineStepper(
+const LocalStepper = defineStepper([
   { id: "sub1", title: "Sub-step 1" },
   { id: "sub2", title: "Sub-step 2" }
-);
+]);
 
 export const NestedSteppers = () => (
   <GlobalStepper.Scoped>
     <GlobalStepContent />
-    <GlobalNavigation />
     <LocalStepper.Scoped>
       <LocalStepContent />
-      <LocalNavigation />
     </LocalStepper.Scoped>
   </GlobalStepper.Scoped>
 );
 
-// Use GlobalStepper.useStepper() for global scope
-// Use LocalStepper.useStepper() for local scope
+const GlobalStepContent = () => {
+  const stepper = GlobalStepper.useStepper();
+  return <div>Global: {stepper.current.data.title}</div>;
+};
+
+const LocalStepContent = () => {
+  const stepper = LocalStepper.useStepper();
+  return <div>Local: {stepper.current.data.title}</div>;
+};
 ```
 
 This structure allows for independent control of global and local stepper states.
+
+## Using Stepper.Root Instead
+
+For most use cases, you can use `Stepper.Root` which internally uses `Scoped` and provides a more convenient API:
+
+```tsx twoslash
+import * as React from "react";
+import { defineStepper } from "@stepperize/react";
+
+const { Stepper } = defineStepper([
+  { id: "first", title: "First" },
+  { id: "second", title: "Second" }
+]);
+
+export const MyStepper = () => (
+  <Stepper.Root initial={{ step: "first" }}>
+    {({ stepper }) => (
+      <div>
+        <p>Current: {stepper.current.data.title}</p>
+        <button onClick={() => stepper.next()}>Next</button>
+      </div>
+    )}
+  </Stepper.Root>
+);
+```
+
+`Stepper.Root` provides:
+- Built-in `Scoped` provider
+- Access to stepper via render props
+- Additional props like `orientation` and `tracking`
