--- a/apps/docs/content/docs/react/installation.mdx
+++ b/apps/docs/content/docs/react/installation.mdx
@@ -6,11 +6,11 @@ icon: Rocket
 
 Choose your preferred package manager to install `@stepperize/react`:
 
-<Tabs groupId="tool" items={["npm", "yarn", "pnpm", "bun"]} defaultValue="npm">
-  <Tab value="npm">```bash npm install @stepperize/react ```</Tab>
-  <Tab value="yarn">```bash yarn add @stepperize/react ```</Tab>
-  <Tab value="pnpm">```bash pnpm install @stepperize/react ```</Tab>
-  <Tab value="bun">```bash bun add @stepperize/react ```</Tab>
+<Tabs groupId="tool" items={["bun", "pnpm", "npm", "yarn"]} defaultValue="bun">
+  <Tab value="bun">```bun add @stepperize/react ```</Tab>
+  <Tab value="pnpm">```pnpm install @stepperize/react ```</Tab>
+  <Tab value="npm">```npm install @stepperize/react ```</Tab>
+  <Tab value="yarn">```yarn add @stepperize/react ```</Tab>
 </Tabs>
 
 ## Next Steps
