--- a/apps/docs/content/docs/react/migration/migrating-to-v5.mdx
+++ b/apps/docs/content/docs/react/migration/migrating-to-v5.mdx
@@ -4,16 +4,27 @@ description: Learn how to migrate from v4 to v5
 icon: CircleFadingArrowUp
 ---
 
+<Callout type="warn">
+  For the latest migration guide (v5 to v6), see [Migrating to v6](./migrating-to-v6).
+</Callout>
+
 Stepperize v5 adds a new `metadata` API to the `useStepper` hook
 
 ## Breaking Changes
 
 ### Name changes in the values returned by the hook
 
-Now the parameters of useStepper are not a string indicating the initial step, but rather an object with the following values:
+Now the parameters of useStepper are not a string indicating the initial step, but rather an object with the `initial` property:
 
-- `initialStep` The ID of the initial step to display
-- `initialMetadata` The initial metadata to set for the steps
+```tsx
+const methods = useStepper({
+  initial: {
+    step: "first",        // The ID of the initial step to display
+    metadata: { ... },    // The initial metadata for each step
+    statuses: { ... },    // The initial status for each step
+  }
+});
+```
 
 ## New Features
 
